partman-auto (81) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Move dev_to_partman() to lib/auto-shared.sh.
    Based on a patch by Grégory Oestreicher.
  * Use convert_to_megabytes() in decode_recipe(), autopartition and
    perform_recipe.
    Depends: partman-base (>= 125)
  * Rename $devfspv_devices to $pv_devices in lib/auto-shared.sh now that we
    don't have devfs devices anymore.

 -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000

partman-auto (80) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Propagate debconf_select() cancel return code in choose_recipe().
  * Correctly handle GOBACK in automatically_partition/some_device/do_option.
    (Closes: #487694)
  * Update to the new debconf_select interface.
    Requires partman-base (>= 124).

  [ Updated translations ]
  * Esperanto (eo.po) by Felipe Castro
	
 -- Otavio Salvador <otavio@debian.org>  Tue, 05 Aug 2008 13:40:40 -0300

partman-auto (79) unstable; urgency=low

  [ Martin Michlmayr ]
  * Use the size values for /boot from the generic recipe for iop32x
    and orion5x since there's no reason to divert from the default.
  * Allow LVM on iop32x and orion5x.
  * Add recipes for ixp4xx that allocate more swap than other recipes
    (for the Linksys NSLU2 which only has 32 MB RAM).
  * ixp4xx: Don't offer lvm by default since it uses many resources.

  [ Frans Pop ]
  * Change default file system for /boot partition from ext3 to ext2.
    As they are relatively small the journal overhead is fairly big and
    because the transaction volume is very low the need for a journal is
    a lot less than on other partitions.

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Finnish (fi.po) by Esko Arajärvi
  * Italian (it.po) by Milo Casagrande
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Slovak (sk.po) by Ivan Masár
  * Turkish (tr.po) by Mert Dirik
