@@ -8,6 +8,9 @@ partman-auto (81) UNRELEASED; urgency=low
     Depends: partman-base (>= 125)
   * Rename $devfspv_devices to $pv_devices in lib/auto-shared.sh now that we
     don't have devfs devices anymore.
+  * create_primary_partitions() and create_partitions() now add dm-crypt
+    devices to $pv_devices when using the "crypto" method, like it is done for
+    LVM.
 
  -- Jérémy Bobbio <lunar@debian.org>  Fri, 01 Aug 2008 22:49:11 +0000
 
